<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/website_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_web_url"
        android:autofillHints="https://www.google.com"
        android:inputType="textWebEditText" />
    <Button
        android:id="@+id/web_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_this_site"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/website_text_id"/>
    <EditText
        android:id="@+id/dial_pad_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_number"
        android:autofillHints="102030044"
        android:inputType="number"
        android:layout_below="@id/web_button_id"/>
    <Button
        android:id="@+id/dial_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_dial_pad"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/dial_pad_text_id"/>
    <EditText
        android:id="@+id/map_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_web_url"
        android:autofillHints="map"
        android:inputType="text"
        android:layout_below="@+id/dial_button_id"/>
    <Button
        android:id="@+id/map_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_map"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/map_text_id"/>
    <EditText
        android:id="@+id/share_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_text_to_share"
        android:autofillHints="this is a simple text"
        android:inputType="text"
        android:layout_below="@+id/map_button_id"/>
    <Button
        android:id="@+id/share_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/share_text_id"/>

    <TextView
        android:id="@+id/text_in_main_activity2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_2"
        android:layout_marginStart="50dp"

        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/back_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true" />
</RelativeLayout>